# mailman3commander

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: manager_reconnect.sh
src/mailman3commander/: __init__.py  docker_mailman.py  mailman3commander.py
src/mailman3commander/locale/: mailman3commander.pot
src/mailman3commander/locale/es/LC_MESSAGES/: mailman3commander.po
