[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailman3commander"
dynamic = ["version"]
description = "menu-based Mailman3 management tool for the console."
readme = "README.md"
keywords = ["mailman3", "console", "menu", "management", "administration", "shell"]
authors = [{name = "Arturo \"Buanzo\" Busleiman", email = "buanzo@buanzo.com.ar"}]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.6"
dependencies = [
    "simple_term_menu",
    "buanzobasics",
    "mailmanclient",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: Other",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/buanzo/mailman3commander"

[project.scripts]
m3c = "mailman3commander.mailman3commander:run"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mailman3commander" = ["locale/mailman3commander.pot", "locale/*/LC_MESSAGES/*.po"]

[tool.setuptools.dynamic]
version = {attr = "mailman3commander.__version__"}
